<resources>
    <string name="app_name">NMS Bärnbach Praktikum</string>
    <string name="title_activity_maps">Map</string>
    <string name="school.text">NMS Bärnbach</string>
    <string name="company">Firma</string>
    <string name="map">Karte</string>
    <string name="school_logo_desc">NMS Bärnbach Logo</string>
    <string name="decide_clincal_adress">decide Clinical Software GmbH\nNeue Stiftingtalstraße 2\nA – 8010 Graz</string>
    <string name="decide_logo">decide Logo</string>
    <string name="map_goto_school">Gehe zu Schule</string>
    <string name="map_goto_decide">Gehe zur Firma</string>
    <string name="map_overview">Übersicht</string>
    <string name="title_activity_about">Info</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about_line1">Entstanden im Rahmen eines Praktikums bei decide Clinical Software GmbH</string>
    <string name="about_author">(c)  David Leitner</string>
    <string name="developer_image">Developer@work</string>
</resources>
